Add script import

--- a/cuba-app.html
+++ b/cuba-app.html
@@ -17,6 +17,7 @@
     <content></content>
   </template>
   <script src="../jquery/dist/jquery.min.js"></script>
+  <script src="cuba-app.js"></script>
   <script>
     (function(){
       "use strict";
