--- a/cuba-app.html
+++ b/cuba-app.html
@@ -7,5 +7,6 @@
 
 @demo demo/index.html 
 -->
+<script src="../jquery/dist/jquery.min.js"></script>
 <script src="cuba-lib.js"></script>
 <script src="cuba-app.js"></script>
