--- a/cuba-app.html
+++ b/cuba-app.html
@@ -8,5 +8,5 @@
 @demo demo/index.html 
 -->
 <script src="../jquery/dist/jquery.min.js"></script>
-<script src="cuba-lib.js"></script>
+<script src="cuba.js"></script>
 <script src="cuba-app.js"></script>
