Add behavior annotation

--- a/cuba-data-loading-behavior.html
+++ b/cuba-data-loading-behavior.html
@@ -6,7 +6,7 @@
    * 2. Call _reload method on meaningful properties changes/initialization i.e:
    *
    *  observers: ['_reload(serviceName, method, handleAs, auto)']
-   *
+   * @polymerBehavior CubaDataLoadingBehavior
    */
 
   CubaDataLoadingBehavior = {
