--- a/cuba-form-behavior.html
+++ b/cuba-form-behavior.html
@@ -1,5 +1,12 @@
 <script>
 
+  /**
+   * Exposes bean validation errors
+   *
+   * @polymerBehavior CubaFormBehavior
+   */
+
+
   CubaFormBehavior = {
 
     properties: {
