Revert data readonly

--- a/cuba-data-loading-behavior.html
+++ b/cuba-data-loading-behavior.html
@@ -25,8 +25,7 @@
         value: true
       },
       data: {
-        notify: true,
-        readOnly: true
+        notify: true
       },
       debounceDuration: {
         type: Number,
