--- a/cuba-data-loading-behavior.html
+++ b/cuba-data-loading-behavior.html
@@ -25,7 +25,8 @@
         value: true
       },
       data: {
-        notify: true
+        notify: true,
+        readOnly: true
       },
       debounceDuration: {
         type: Number,
@@ -54,7 +55,7 @@
         this.loadRequest.then(
             function(data) {
               this._setLoading(false);
-              this.data = data;
+              this._setData(data);
               defer.resolve(data);
             }.bind(this),
             function () {
