Fix GET requests

--- a/cuba-localize-behavior.html
+++ b/cuba-localize-behavior.html
@@ -25,7 +25,8 @@
 
         serverMessages: {
           type: Object,
-          readonly: true
+          readonly: true,
+          value: {}
         },
 
         msg: {
