--- a/cuba-app.html
+++ b/cuba-app.html
@@ -14,7 +14,6 @@ Adds `cuba` object to the global JS scope.
     </style>
     <content></content>
   </template>
-  <script src="../rxjs/dist/rx.lite.js"></script>
   <script src="cuba.js"></script>
   <script>
     (function(){
@@ -58,7 +57,7 @@ Adds `cuba` object to the global JS scope.
 
           this.fire('cuba-app-initialized');
 
-          this.app.tokenExpirySubject.subscribe(function() {
+          this.app.onTokenExpiry(function() {
             this.fire('cuba-token-expired');
           }.bind(this));
 
