refactor: Migrate to cuba-js-sdk
PWC-3

--- a/cuba-app.html
+++ b/cuba-app.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../promise-polyfill/promise-polyfill-lite.html">
-
+<link rel="import" href="cuba-js-sdk-script.html">
 <!--
 The `cuba-app` element is used for initialization and configuration connection to CUBA REST API.
 Adds `cuba` object to the global JS scope.
@@ -14,7 +14,6 @@ Adds `cuba` object to the global JS scope.
     </style>
     <content></content>
   </template>
-  <script src="cuba.js"></script>
   <script>
     (function(){
       "use strict";
