slot instead of content

--- a/cuba-app.html
+++ b/cuba-app.html
@@ -12,7 +12,7 @@ Adds `cuba` object to the global JS scope.
         display: block;
       }
     </style>
-    <content></content>
+    <slot></slot>
   </template>
   <script>
     (function(){
