Fix cuba-js-sdk → cuba-js
PWC-2

--- a/cuba-app.html
+++ b/cuba-app.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="cuba-js-sdk-script.html">
+<link rel="import" href="cuba-js-script.html">
 <!--
 The `cuba-app` element is used for initialization and configuration connection to CUBA REST API.
 Adds `cuba` object to the global JS scope.
