Fix cuba-app typings

--- a/cuba-app-aware-behavior.html
+++ b/cuba-app-aware-behavior.html
@@ -7,6 +7,9 @@
     CubaAppAwareBehavior = {
 
       properties: {
+        /**
+         * @type {cuba.CubaApp}
+         */
         app: {
           type: Object,
           notify: true,
